--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,7 @@
     "require": {
         "php": ">=5.3.2",
         "symfony/validator": "~4.3",
-        "respect/validation": "1.1.31"
+        "respect/validation": "dev-master"
     },
     "require-dev": {
         "phpunit/phpunit": "~4.6"
