--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
     ],
     "require": {
         "php": ">=5.3.2",
-        "symfony/validator": "~4.3",
+        "symfony/validator": "^5.0",
         "respect/validation": "^1.1"
     },
     "require-dev": {
