--- a/composer.json
+++ b/composer.json
@@ -16,11 +16,11 @@
         "respect/validation": "^1.1"
     },
     "require-dev": {
-        "phpunit/phpunit": "~4.6"
+        "phpunit/phpunit": "^8.5"
     },
     "autoload": {
         "psr-4": {
-            "Respect\\ValidationBundle\\": "."
+            "Habibun\\RespectValidationBundle\\": "."
         }
     }
 }
